syntax = "proto3";
//import "google/protobuf/any.proto";
//option optimize_for = LITE_RUNTIME;
option java_package = "org.microg.common.beans";

message PeopleRequest {
  string name = 1;
  PeopleConfig config = 2;
  OtherConfig other_config = 4;
}

message PeopleConfig{
  ListConfig config = 1;
  string other = 3 ;
  RequestType type = 7;
}

message OtherConfig{
  ProfileNameConfig config = 4;
}

message RequestType{
  int64 level = 2;
}

message ProfileNameConfig{
  string name = 1;
}

message ListConfig{
  repeated string names = 1;
}



